--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.6.1",
     "register-service-worker": "^1.7.2",
+    "unplugin-auto-import": "^0.16.1",
+    "unplugin-vue-components": "^0.25.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
